# FileUpload

./: .clangd  .gitignore  .qmlls.ini  CMakeLists.txt  Constants.h  Controller.cpp  Controller.h  FileWork.cpp  FileWork.h  Main.qml  QuickFramelessWindow.cpp  QuickFramelessWindow.h  SenderQueue.cpp  SenderQueue.h  Singleton.h  TcpManager.cpp  TcpManager.h  main.cpp
